// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timer Display Tests should be displayed when isActive is true 1`] = `
<div
  className="container "
/>
`;

exports[`Timer Display Tests should be hidden when isActive is false 1`] = `
<div
  className="container completed"
/>
`;
